<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="btn_1">Spotify</string>
    <string name="btn_2">Super Duo</string>
    <string name="btn_3">SD Lib App</string>
    <string name="btn_4">Build It Bigger</string>
    <string name="btn_5">XYZ Reader</string>
    <string name="btn_6">Capstone: My App</string>
    <string name="textView1">My App Portfolio</string>
</resources>
