<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:backgroundTint="#78c2ff"
    android:background="#92eeff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView1"
        android:id="@+id/textView1"
        android:textAlignment="center"
        android:textColor="#734bff"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:text="@string/btn_1"
        android:id="@+id/toggleButton1"
        android:gravity="center|center_vertical"
        android:height="75dp"
        android:minWidth="250dp"
        android:clickable="true"
        android:textColor="@android:color/black"
        android:checked="false"
        android:textStyle="bold"
        android:textOn="@string/btn_1"
        android:textOff="@string/btn_1"
        android:background="#ff5b85"
        android:onClick="launchApp"
        android:padding="5dp"
        android:layout_below="@+id/textView1"
        android:layout_alignStart="@+id/toggleButton3"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="10dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:text="@string/btn_2"
        android:id="@+id/toggleButton2"
        android:gravity="center"
        android:height="75dp"
        android:minWidth="250dp"
        android:clickable="true"
        android:textOff="@string/btn_2"
        android:textOn="@string/btn_2"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="#ff5b85"
        android:onClick="launchApp"
        android:checked="false"
        android:padding="5dp"
        android:layout_below="@+id/toggleButton1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:text="@string/btn_3"
        android:id="@+id/toggleButton3"
        android:gravity="center"
        android:height="75dp"
        android:minWidth="250dp"
        android:clickable="true"
        android:textOff="@string/btn_3"
        android:textOn="@string/btn_3"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="#ff5b85"
        android:onClick="launchApp"
        android:checked="false"
        android:padding="5dp"
        android:layout_below="@+id/toggleButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:text="@string/btn_4"
        android:id="@+id/toggleButton4"
        android:gravity="center"
        android:height="75dp"
        android:minWidth="250dp"
        android:clickable="true"
        android:textOn="@string/btn_4"
        android:textOff="@string/btn_4"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="#ff5b85"
        android:onClick="launchApp"
        android:padding="5dp"
        android:layout_below="@+id/toggleButton3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:checked="false" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:text="@string/btn_5"
        android:id="@+id/toggleButton5"
        android:gravity="center"
        android:height="75dp"
        android:minWidth="250dp"
        android:clickable="true"
        android:textIsSelectable="false"
        android:textOff="@string/btn_5"
        android:textOn="@string/btn_5"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="#ff5b85"
        android:layout_alignWithParentIfMissing="false"
        android:onClick="launchApp"
        android:padding="5dp"
        android:layout_below="@+id/toggleButton4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:text="@string/btn_6"
        android:id="@+id/toggleButton6"
        android:gravity="center"
        android:height="75dp"
        android:minWidth="250dp"
        android:clickable="true"
        android:textIsSelectable="false"
        android:textOff="@string/btn_6"
        android:textOn="@string/btn_6"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="#ff0088"
        android:layout_alignWithParentIfMissing="false"
        android:onClick="launchApp"
        android:padding="5dp"
        android:layout_below="@+id/toggleButton5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
